workspace = { members = [ "matchmaking","network"] }
[package]
name = "imposal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network = { path = "network" }
matchmaking = { path = "matchmaking" }
rand = "0.9.0-alpha.1"
rand_core = "0.9.0-alpha.1"
tokio = { version = "1.38.0", features = ["full"] }