[package]
name = "matchmaking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network = { path = "../network" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
chrono = "0.4.38"
hmac = "0.13.0-pre.3"
sha2 = "0.11.0-pre.3"
base64 = "0.22.1"
log = "0.4"
pretty_env_logger = "0.5.0"